--- a/Parties/data.yml
+++ b/Parties/data.yml
@@ -52,9 +52,12 @@ players:
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     party: MobTalkers
     rank: 20
-  fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    party: Enchantt
+  f704202f-1ea2-41c3-b4a0-1cbdbcfae9e1:
+    party: Chat
     rank: 5
+  ae9341b2-c58a-4c51-8ada-c9ca4d47aad4:
+    party: SamTDE
+    rank: 20
 parties:
   anti:
     leader: 34a87619-4b40-4ae8-b759-3efa25bbbffd
@@ -95,13 +98,18 @@ parties:
     members:
     - 28556dea-667d-409f-b2ff-fb4177a20ff2
     - 4ff867f5-6cab-413e-9fad-e4d77ca48778
-    - fbb8c072-4c4b-49c8-948b-26e8ad73099e
   Chat:
     leader: 66edaf7d-94e7-44cf-9d99-34d3ad90594e
     members:
     - 66edaf7d-94e7-44cf-9d99-34d3ad90594e
     - 08239f79-b930-4893-b723-44f38d003500
+    - f704202f-1ea2-41c3-b4a0-1cbdbcfae9e1
+    home: survival,-115,151,122,-171.16345,28.050028
   MobTalkers:
     leader: dbb47887-bfbd-40e6-bfec-3d1053ea3aff
     members:
     - dbb47887-bfbd-40e6-bfec-3d1053ea3aff
+  SamTDE:
+    leader: ae9341b2-c58a-4c51-8ada-c9ca4d47aad4
+    members:
+    - ae9341b2-c58a-4c51-8ada-c9ca4d47aad4
