--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -9,8 +9,8 @@ v2-logout:
     world: greenfield
     group: default
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
-    world: spawn
-    group: spawn
+    world: survival
+    group: default
   deb20342-389e-4b5f-808f-24bd22d88aa4:
     world: greenfield
     group: default
@@ -33,8 +33,8 @@ v2-logout:
     group: policeoffice
     world: policeoffice
   f621586e-8ef8-448d-9264-86b61375052e:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: greenfield
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     world: greenfield
     group: default
@@ -87,11 +87,11 @@ v2-logout:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: newminigamehub
-    group: newminigamehub
-  cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     world: overvoid
     group: overvoid
+  cb871f86-94e5-4bf3-a78e-42f73c2215c4:
+    world: policeoffice
+    group: policeoffice
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     world: spawn
     group: spawn
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: survival
-    group: default
+    world: policeoffice
+    group: policeoffice
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: default
     world: greenfield
@@ -195,14 +195,14 @@ v2-logout:
     group: default
     world: greenfield
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: survival
   78af88f4-cd13-4950-a737-7d36b15ead56:
     group: default
     world: greenfield
   0130299a-4489-429d-b4eb-68643a4c6ac8:
-    world: policeoffice
-    group: policeoffice
+    world: escaperoom
+    group: escaperoom
   aafab66a-64f9-403e-a92c-1a20bfde19a7:
     group: default
     world: greenfield
@@ -402,8 +402,8 @@ v2-logout:
     group: default
     world: greenfield
   a8185de3-b053-4aca-9eb6-d98728e476ad:
-    world: greenfield
-    group: default
+    world: spleeflobby
+    group: spleeflobby
   03bd377c-eb0d-4e84-b733-e27fd9a954b1:
     group: default
     world: greenfield
@@ -489,8 +489,8 @@ v2-logout:
     group: default
     world: greenfield
   4220f479-2a13-48c6-82a4-58f37008b5d2:
-    group: default
-    world: greenfield
+    group: office
+    world: office
   bf559559-e3c6-4445-bc99-2f2d8a137688:
     group: default
     world: metropolis
@@ -621,7 +621,7 @@ v2-logout:
     group: default
     world: survival
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
-    world: infinitycity
+    world: greenfield
     group: default
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group: spawn
@@ -775,7 +775,7 @@ v2-logout:
     world: greenfield
   1b7d4e07-4245-42d5-9a18-51ec929a1dfd:
     group: default
-    world: survival
+    world: greenfield
   ca37337a-4875-4c14-9f85-08794721855b:
     group: default
     world: greenfield
@@ -1379,8 +1379,8 @@ v2-logout:
     group: default
     world: survival
   5da26092-c807-4c9b-8d08-9523f74ddc97:
-    group: overvoid
-    world: overvoid
+    group: policeoffice
+    world: policeoffice
   965ab7af-16e7-4dd0-b16c-f26d4300d23f:
     group: default
     world: greenfield
@@ -1454,8 +1454,8 @@ v2-logout:
     group: default
     world: survival
   0880eccc-feed-4a2f-9e22-d8f721f3913e:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: greenfield
   fc252bc6-ef87-447f-8735-28ec6c07731f:
     group: default
     world: greenfield
@@ -1911,7 +1911,7 @@ v2-logout:
     world: survival
   bcb75803-9189-4561-81af-dbe1fdb46263:
     group: default
-    world: survival
+    world: greenfield
   0470974c-3b8b-428e-966b-5c45dcc98032:
     group: default
     world: greenfield
@@ -2330,8 +2330,8 @@ v2-logout:
     group: default
     world: survival
   54012046-f9f6-43d7-adc1-080073c88ade:
-    group: spawn
-    world: spawn
+    group: wooftywoo
+    world: wooftywoo
   2759e574-85bf-4b91-a079-15d316e419af:
     group: default
     world: greenfield
@@ -2380,8 +2380,8 @@ v2-logout:
     group: default
     world: survival
   08239f79-b930-4893-b723-44f38d003500:
-    group: overvoid
-    world: overvoid
+    group: default
+    world: greenfield
   e9a01180-a9e4-4da0-8d2e-990285e0af23:
     group: default
     world: greenfield
@@ -2497,8 +2497,8 @@ v2-logout:
     group: wooftywoo
     world: wooftywoo
   05bf0af3-a0a6-4e9e-bb7d-a29d7d43ea85:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: greenfield
   be38c0ad-0e4f-4481-a0dd-bda1d39fc50e:
     group: default
     world: greenfield
@@ -2525,7 +2525,7 @@ v2-logout:
     world: greenfield
   f704202f-1ea2-41c3-b4a0-1cbdbcfae9e1:
     group: default
-    world: greenfield
+    world: survival
   751c1926-25d5-43e6-9d39-728bcf116659:
     group: default
     world: greenfield
@@ -2581,8 +2581,8 @@ v2-logout:
     group: default
     world: greenfield
   ae9341b2-c58a-4c51-8ada-c9ca4d47aad4:
-    group: deathrun
-    world: deathrun
+    group: default
+    world: greenfield
   d48b022d-aa81-4f9f-9463-413f03fbb823:
     group: default
     world: greenfield
@@ -2672,7 +2672,7 @@ v2-logout:
     world: greenfield
   714eb728-6f99-47bb-9af3-4b43e36bf9b9:
     group: default
-    world: survival
+    world: greenfield
   e23b7311-4485-4ae1-8336-177279e1151f:
     group: default
     world: greenfield
@@ -2716,14 +2716,14 @@ v2-logout:
     group: default
     world: survival
   88a26306-9149-4a98-be6c-47a1ac72201b:
-    group: default
-    world: greenfield
+    group: plots
+    world: plots
   67895bd7-befa-4e7d-aa85-b0f793ab618a:
     group: default
     world: greenfield
   2f55375d-e178-46df-a823-6352c11068ff:
     group: default
-    world: survival
+    world: greenfield
   4936af48-dfdf-45ac-973f-2ab463015706:
     group: default
     world: greenfield
@@ -2748,3 +2748,69 @@ v2-logout:
   28c5f778-be37-4b0c-ac0f-2acd0e0d1128:
     group: deathrun
     world: deathrun
+  098eae6b-5a95-4184-b07d-f0810fa229f6:
+    group: spawn
+    world: spawn
+  41041f74-cc86-4fae-97b5-449f224e709d:
+    group: default
+    world: gotham
+  34071b22-c558-4a68-ab1e-b9c13c9b9ced:
+    group: default
+    world: greenfield
+  2fbf06b5-b905-447d-96c5-802b0580f62a:
+    group: default
+    world: greenfield
+  01e263b5-c4c5-43eb-a2ba-e9ee5a81a54e:
+    group: default
+    world: gotham
+  54062ac4-bbfb-4163-86ca-5a4c4a6882df:
+    group: escaperoom
+    world: escaperoom
+  51f64d88-7c8a-4cae-9aec-304a72c08695:
+    group: default
+    world: greenfield
+  96103548-f044-4686-8aea-0ad110393820:
+    group: spawn
+    world: spawn
+  4a56a0ba-9c67-4421-ac14-8514db192633:
+    group: default
+    world: greenfield
+  1de949b5-ea26-4290-a6ce-980fcc37d539:
+    group: default
+    world: greenfield
+  0c32417a-17a4-4918-9eba-0cddcc29864f:
+    group: default
+    world: greenfield
+  8d570e89-cedd-4f55-a887-21fd5acdc770:
+    group: default
+    world: greenfield
+  550dcece-db8d-4f65-ae48-718dedd8a1a4:
+    group: default
+    world: greenfield
+  6c86de43-0510-42bc-9117-6c6126d1e445:
+    group: default
+    world: greenfield
+  3d6cdc72-31e9-4b29-b01a-4792e1e5c5d2:
+    group: plots
+    world: plots
+  70cd30df-71a5-4bba-bc0c-263e6ea5f6d6:
+    group: default
+    world: greenfield
+  4465f61d-06a5-4de2-a53d-e767b90592f8:
+    group: policeoffice
+    world: policeoffice
+  300a7156-107a-4710-ad9b-fcd9f64dd993:
+    group: default
+    world: greenfield
+  c8fb389f-2c1a-492c-9fc9-d835fb3dd087:
+    group: default
+    world: greenfield
+  61b4df9e-480a-401c-9dde-d7292f2f2940:
+    group: default
+    world: greenfield
+  e8fbee67-7539-4ffa-94dc-eb1eb0c8fc81:
+    group: default
+    world: survival
+  720b7e25-3610-4c16-81db-3c3b7192ea98:
+    group: default
+    world: survival
