--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -19751,7 +19751,7 @@ users:
       name: TBNRattata
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - mortal
+    - fanficdbb47887bfbd40e6bfec3d1053ea3aff
     options:
       name: TaterBalls
       prefix: ''
@@ -20927,7 +20927,7 @@ users:
       name: Jakestar1203
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - officer
+    - mortal
     options:
       name: mythguy1226
     permissions:
@@ -21625,7 +21625,7 @@ users:
     group:
     - criminal
     options:
-      name: MaurekSareye
+      name: Viibe_
     worlds:
       greenfield:
         permissions: []
