--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -2814,3 +2814,6 @@ v2-logout:
   720b7e25-3610-4c16-81db-3c3b7192ea98:
     group: default
     world: survival
+  9333fff7-e7b2-4ebd-ba8c-50b86119d53f:
+    group: default
+    world: greenfield
