--- a/Multiverse-NetherPortals/config.yml
+++ b/Multiverse-NetherPortals/config.yml
@@ -2,4 +2,399 @@ bounceback: true
 worlds:
   policeoffice:
     portalgoesto:
-      NETHER: policeoffice_nether
+      NETHER: survival_nether
+      END: survival_the_end
+  moblottery:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  newcity:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  elytralobby:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  skywarslobby:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  parkourmedium:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  formuladrift:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  speedforce:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  fortressofsolitude:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  runner:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  turfwars:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  hurdles:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  crossfire:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  metropolis:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  longparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  mazerunner:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  spleef:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  parkourhub:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  towerparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  boatrace:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  pvpworldsforest:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  escaperoom:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  hurdles2:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  lavahop:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  freezetag:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  minecraftparkourmode:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  elytrapole:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  pvpworldsundergroundarmory:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  obstaclecourse:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  wooftywoo:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  parkoureasy:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  vampirez:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  superherocity:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  hilariousrace:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  pvpparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  titanstower:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  straightlineparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  waynemanor:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  parkourhard:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  colosseumlobby:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  garbageworld:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  splegg:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  torture:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  deathrun:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  deathmachine:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  waterprison:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  flyingbattlearena:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  sprintparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  rollercoaster:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  rules:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  office:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  parksideprisonescape:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  fightclub:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  pvpworldsruins:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  flyingbattlelobby:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  elytraeasy:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  gotham:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  megaparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  info:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  godlyparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  chess:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  hallofjustice:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  marathon:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  techcombatknockbackgame:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  anarchy:
+    portalgoesto:
+      END: survival_the_end
+  infectiontag:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  elytrahard:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  verticalparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  extremesumo:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  newminigamehub:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  checkers:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  quickparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  flappybirdparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  deathdrop:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  heroicparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  lasertag:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  initiation:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  alpha:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  pvpparkourlobby:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  infiniteparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  turbotowers:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  colosseum:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  soccer:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  greenfield:
+    portalgoesto:
+      NETHER: survival_nether
+  spleeflobby:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  utopia:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  wallenpole:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  kingoftheladder:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  elytramedium:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  elytrapvp:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  shortparkour:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  plots:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  overvoid:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  spawn:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  powerpicker:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  temple:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  labyrinth:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  pvpworldslobby:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  infinitycity:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
+  skywars:
+    portalgoesto:
+      NETHER: survival_nether
+      END: survival_the_end
