--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3570,7 +3570,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: RedSkies_
+      prefix: RedBirdie
     worlds:
       survival:
         permissions:
@@ -12591,7 +12591,7 @@ users:
         permissions: []
   1b7d4e07-4245-42d5-9a18-51ec929a1dfd:
     group:
-    - enderman
+    - blackracerwilliewalker
     options:
       name: BlackCat109
     worlds:
@@ -13110,7 +13110,7 @@ users:
       name: ii_Indra
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - criminal
+    - missmartian
     options:
       name: X_FoodMeatHark_X
       prefix: ''
@@ -16163,7 +16163,7 @@ users:
       name: HunterPlayz210xx
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group:
-    - firestormraymondstein
+    - apocalypse
     options:
       name: That_Biscuit_Boy
     permissions:
@@ -16270,7 +16270,7 @@ users:
       name: Emilysquid13
   7dff91dd-96e6-4b73-9dfa-17992e055694:
     group:
-    - godspeed
+    - flashwallywest
     options:
       name: _TreyCode_
     worlds:
@@ -16716,12 +16716,13 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - zion
+    - criminal
     options:
       name: God_Doesnt_Exist
       prefix: ''
       suffix: '&a&l&o'
     permissions:
+    - is.suspended
     - -powers.fireballpunch
     - -is.suspended
     - -powers.wallrun
@@ -17856,7 +17857,7 @@ users:
       name: Gulithor
   a90bff3f-1f10-4734-9f90-2dfb0660b66e:
     group:
-    - dannyphantom
+    - impulsebartallen
     options:
       name: SonicRush
     permissions: []
@@ -18160,7 +18161,7 @@ users:
       name: FlamesGalore
   b09b6618-e035-4e1f-be4e-f01ec6888001:
     group:
-    - flashwallywest
+    - blackflash
     options:
       name: Bcrulez
     permissions: []
@@ -19209,7 +19210,7 @@ users:
       prefix: '&7{&4Advocating hacking&7} '
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     group:
-    - omega
+    - policechief
     options:
       name: xSp4rkz
     permissions:
@@ -20538,7 +20539,7 @@ users:
       name: footballkilla84
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
     group:
-    - brainiac
+    - zeus
     options:
       name: ___Entity_303___
     permissions:
@@ -20927,10 +20928,11 @@ users:
       name: Jakestar1203
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - mortal
+    - officer
     options:
       name: mythguy1226
     permissions:
+    - is.suspended
     - is.officer
     - ch.alias.onduty
     - is.married
@@ -21623,7 +21625,7 @@ users:
       name: paddy_wack
   9068e658-a14f-43a3-ad65-04dbac12a5e0:
     group:
-    - criminal
+    - savitar
     options:
       name: Viibe_
     worlds:
@@ -23573,6 +23575,26 @@ users:
     - mortal
     options:
       name: masongreenman
+  605de075-3675-4cd8-b91c-3a0a9e9bf0f4:
+    group:
+    - bluelanternbarryallen
+    worlds:
+      greenfield:
+        permissions: []
+    permissions:
+    - multiverse.access.policeoffice
+    options:
+      name: Firephoenix0254
+  c89c0df2-a49f-49a5-9a59-54f0c02ab5ee:
+    group:
+    - venom
+    options:
+      name: xElite2point0
+  013f146f-9cc1-4e4c-9208-d6f2a6a8005a:
+    group:
+    - starsapphirecarolferris
+    options:
+      name: sugerush
 worlds:
   checkers:
     inheritance:
