--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -9,8 +9,8 @@ v2-logout:
     world: greenfield
     group: default
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
-    world: survival
-    group: default
+    world: policeoffice
+    group: policeoffice
   deb20342-389e-4b5f-808f-24bd22d88aa4:
     world: greenfield
     group: default
@@ -90,8 +90,8 @@ v2-logout:
     world: overvoid
     group: overvoid
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
-    world: policeoffice
-    group: policeoffice
+    world: overvoid
+    group: overvoid
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     world: spawn
     group: spawn
@@ -108,8 +108,8 @@ v2-logout:
     group: default
     world: greenfield
   a90bff3f-1f10-4734-9f90-2dfb0660b66e:
-    group: spleeflobby
-    world: spleeflobby
+    group: default
+    world: survival
   1339b2c5-f0b8-4b26-ba29-d0c0fd1a0401:
     group: default
     world: greenfield
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: policeoffice
-    group: policeoffice
+    world: overvoid
+    group: overvoid
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: default
     world: greenfield
@@ -810,8 +810,8 @@ v2-logout:
     group: default
     world: greenfield
   b09b6618-e035-4e1f-be4e-f01ec6888001:
-    group: speedforce
-    world: speedforce
+    group: default
+    world: greenfield
   e42aca57-c30e-4b35-90e5-bc2eae2f12b2:
     group: default
     world: greenfield
@@ -2138,8 +2138,8 @@ v2-logout:
     group: default
     world: greenfield
   7dff91dd-96e6-4b73-9dfa-17992e055694:
-    group: office
-    world: office
+    group: default
+    world: greenfield
   cf21bcfb-2c12-49b6-b843-794dd7272e84:
     group: default
     world: greenfield
@@ -2817,3 +2817,12 @@ v2-logout:
   9333fff7-e7b2-4ebd-ba8c-50b86119d53f:
     group: default
     world: greenfield
+  c89c0df2-a49f-49a5-9a59-54f0c02ab5ee:
+    group: default
+    world: greenfield
+  605de075-3675-4cd8-b91c-3a0a9e9bf0f4:
+    group: default
+    world: greenfield
+  013f146f-9cc1-4e4c-9208-d6f2a6a8005a:
+    group: lavahop
+    world: lavahop
